Fix content overlap with fixed navbar

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -91,6 +91,10 @@ main .container {
     margin-top: 5rem;
 }
 
+.dashboard-wrapper {
+    padding-top: 50px;
+}
+
 .menu-bg {
     background-image: url('/static/images/menu-background.webp');
     background-size: cover;
